2011-01-03 Malignant Manor <malignantmanor@users.sourceforge.net>
	* imagewin/imagewin.cc: Fix 8 bit video checks in static_init
	* actors.cc: Made the Avatar immune to charm in normal charm
		difficulty. The original allowed the Avatar to be charmed. It
		only showed the highlight and status icon. It wasn't harmful.

2010-12-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* objs/objs.cc: Fix triple crossbow bolt quantity frames offset
		being wrong making it seem to disappear. Bug 3053282

2010-12-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* /objs/eggs.cc: Fix SS stairs so they autoreset. Bug 3115182
	* /mapedit/studio.cc: Fix typo that messed up -p command line.

2010-12-28 Malignant Manor <malignantmanor@users.sourceforge.net>
	* /mapedit/exult_studio.glade: Fix swapped neutral and friendly
		alignment display in monster eggs and monster info.

2010-12-27 Malignant Manor <malignantmanor@users.sourceforge.net>
	*/objs/jawbone.cc: Revert same tooth restriction since Marzo
		plans to do something different.

2010-12-26 Malignant Manor <malignantmanor@users.sourceforge.net>
	* mapedit/npcedit.cc, mapedit/npclst.cc, mapedit/studio.h:
		Make npcs update properly in the npc browser when apply is
		clicked or a newly created npc is placed in game.

2010-12-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamemgr/bggame.cc, gamemgr/sigame.cc, gumps/Gump_manager.cc,
		gumps/Spellbookgump.cc: Allow spell scrolls, jawbone, and
		teeth in all games.

2010-12-25 Malignant Manor <malignantmanor@users.sourceforge.net>
	* objs/jawbone.cc: Don't allow two teeth with the same frame and
	shape to be placed in the same jawbone container.
	* monsters.cc: Use get_num_frames() to get max number of frames
		for random food drops
	* gamewin.cc: Commented out seemingly useless jawbone.h include

2010-12-23 Malignant Manor <malignantmanor@users.sourceforge.net>
	* cheat.cc: Fix bug that prevented -p command line from